Added new co-expression method and FINEMAP

--- a/03_Functional_Interpretation/scripts/cis_eqtl_peak_overlap.ipynb
+++ b/03_Functional_Interpretation/scripts/cis_eqtl_peak_overlap.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "id": "97509b03-4b70-47f7-a10b-e42166213711",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "id": "263ec0e7-1d52-45be-a02f-4d9551757f91",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 16,
    "id": "188e3286-5e7e-4863-a2a9-7b1391353a74",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 17,
    "id": "15be98b0-c664-4adb-bd56-fd13de186ecd",
    "metadata": {},
    "outputs": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 18,
    "id": "a2b2b8f8-4379-4f03-90f9-062d903a6e96",
    "metadata": {},
    "outputs": [],
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 19,
    "id": "f63c2f0f-52f9-4d1d-9871-ae93842e69c5",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "2e14e4b1-0122-4ac5-80a9-f2619ecde39b",
    "metadata": {},
    "outputs": [],
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "678c8ad0-74ca-4d22-a845-ff265630cd25",
    "metadata": {},
    "outputs": [],
@@ -1019,14 +1019,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "401415a6-585f-473d-bb58-fa8b005590ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "da.peak.ranges <- dplyr::bind_rows(\n",
-    "        da.peaks.ia %>% dplyr::select(everything(), -Cell.Type),\n",
-    "        da.peaks.rm %>% dplyr::select(everything(), -Treatment)\n",
+    "        da.peaks.ia %>% dplyr::select(everything(), Contrast.Name=Cell.Type),\n",
+    "        da.peaks.rm %>% dplyr::select(everything(), Contrast.Name=Treatment)\n",
     "    ) %>%\n",
     "    dplyr::mutate(strand=\"*\") %>%\n",
     "    dplyr::filter(Peak.Chr %in% c(1:22, \"X\")) %>%\n",
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "id": "bf245112-6436-47d2-9a3e-bc53744cc579",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "id": "f1888b74-d238-41b8-bcba-d1f1ca37e344",
    "metadata": {},
    "outputs": [],
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "id": "cd1cc675-7109-485f-bac8-7b82646192cf",
    "metadata": {},
    "outputs": [],
@@ -1067,7 +1067,7 @@
     "    as.data.frame(susie.snps.ranges[overlaps@from, ]) %>%\n",
     "        dplyr::select(SNP.Chr=seqnames, SNP.Pos=start, eQTL.Gene=Gene, Credible.Set=Credible_Set, CS.Prob=SNP_Prob),\n",
     "    as.data.frame(da.peak.ranges[overlaps@to, ]) %>%\n",
-    "        dplyr::select(Peak.ID=Peak.ID, Peak.Chr=seqnames, Peak.Start=start, Peak.End=end, Peak.Width=width, Peak.Contrast=Contrast, Peak.Log.FC=logFC, Peak.P=adj.P.Val)\n",
+    "        dplyr::select(Peak.ID=Peak.ID, Peak.Chr=seqnames, Peak.Start=start, Peak.End=end, Peak.Width=width, Peak.Contrast=Contrast, Peak.Contrast.Name=Contrast.Name, Peak.Log.FC=logFC, Peak.P=adj.P.Val)\n",
     ")"
    ]
   },
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "id": "1339da70-d1e6-490e-b83e-adaf7a13b1a3",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "86cb0b74-6342-465f-82e5-ef75a0a93a0f",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "id": "592f6a31-df97-4e49-b25d-1f5ffe7dcd33",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "id": "e7176840-eb69-4018-8c46-078b1cf0b366",
    "metadata": {},
    "outputs": [
@@ -1269,6 +1269,252 @@
    "source": [
     "length(unique(overlap.set$eQTL.Gene))\n",
     "length(unique(overlap.set$eQTL.Gene)) / length(unique(cis.eqtl.conditional$gene))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c715d84-10c6-427a-b9b4-c194775a1040",
+   "metadata": {},
+   "source": [
+    "Are eGenes that have overlapping credibility sets with DA peaks also DE genes?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "35bb54a2-f0a2-45a7-b283-6dd7e8f22c2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "478"
+      ],
+      "text/latex": [
+       "478"
+      ],
+      "text/markdown": [
+       "478"
+      ],
+      "text/plain": [
+       "[1] 478"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "overlap.peak.genes <- merge(\n",
+    "    de.genes %>%\n",
+    "        dplyr::mutate(ID=paste0(Cell.Type, \":\", Gene.ID)),\n",
+    "    overlap.set %>%\n",
+    "        dplyr::mutate(ID=paste0(Peak.Contrast.Name, \":\", eQTL.Gene)),\n",
+    "    by=\"ID\"\n",
+    ")\n",
+    "\n",
+    "length(unique(overlap.peak.genes$Gene.ID))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83797b0f-496d-4a92-9fad-ea885ddb9488",
+   "metadata": {},
+   "source": [
+    "Which cell types tend to have cis-eQTL? Surprisingly, most enriched in Mature NK cells, followed by Memory Tregs, Naive CD8 T Cells, and Naive B Cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "df157e26-9687-4d28-9df5-32f69e5cdeca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 20 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Cell.Type</th><th scope=col>DA.Peak.Count</th><th scope=col>Overlap.Count</th><th scope=col>Proportion</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Mature_NK               </td><td>  292</td><td>  40</td><td>0.13698630</td></tr>\n",
+       "\t<tr><td>Memory_Tregs            </td><td> 5776</td><td> 355</td><td>0.06146122</td></tr>\n",
+       "\t<tr><td>Naive_CD8_T             </td><td> 3389</td><td> 207</td><td>0.06107996</td></tr>\n",
+       "\t<tr><td>Naive_B                 </td><td> 4444</td><td> 263</td><td>0.05918092</td></tr>\n",
+       "\t<tr><td>Regulatory_T            </td><td> 8766</td><td> 515</td><td>0.05874971</td></tr>\n",
+       "\t<tr><td>Effector_memory_CD8pos_T</td><td>15890</td><td> 925</td><td>0.05821271</td></tr>\n",
+       "\t<tr><td>Gamma_delta_T           </td><td> 4474</td><td> 260</td><td>0.05811354</td></tr>\n",
+       "\t<tr><td>Naive_Teffs             </td><td>19934</td><td>1149</td><td>0.05764021</td></tr>\n",
+       "\t<tr><td>Naive_Tregs             </td><td>   53</td><td>   3</td><td>0.05660377</td></tr>\n",
+       "\t<tr><td>Bulk_B                  </td><td> 2343</td><td> 130</td><td>0.05548442</td></tr>\n",
+       "\t<tr><td>Th17_precursors         </td><td>25923</td><td>1389</td><td>0.05358176</td></tr>\n",
+       "\t<tr><td>Effector_CD4pos_T       </td><td>25194</td><td>1342</td><td>0.05326665</td></tr>\n",
+       "\t<tr><td>CD8pos_T                </td><td>11672</td><td> 614</td><td>0.05260452</td></tr>\n",
+       "\t<tr><td>Mem_B                   </td><td> 1738</td><td>  91</td><td>0.05235903</td></tr>\n",
+       "\t<tr><td>Central_memory_CD8pos_T </td><td>17178</td><td> 896</td><td>0.05215974</td></tr>\n",
+       "\t<tr><td>Follicular_T_Helper     </td><td>25000</td><td>1303</td><td>0.05212000</td></tr>\n",
+       "\t<tr><td>Th1_precursors          </td><td>32167</td><td>1641</td><td>0.05101502</td></tr>\n",
+       "\t<tr><td>Th2_precursors          </td><td>28193</td><td>1394</td><td>0.04944490</td></tr>\n",
+       "\t<tr><td>Memory_Teffs            </td><td>32962</td><td>1619</td><td>0.04911717</td></tr>\n",
+       "\t<tr><td>Monocytes               </td><td>   45</td><td>   2</td><td>0.04444444</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 20 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " Cell.Type & DA.Peak.Count & Overlap.Count & Proportion\\\\\n",
+       " <fct> & <int> & <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t Mature\\_NK                &   292 &   40 & 0.13698630\\\\\n",
+       "\t Memory\\_Tregs             &  5776 &  355 & 0.06146122\\\\\n",
+       "\t Naive\\_CD8\\_T              &  3389 &  207 & 0.06107996\\\\\n",
+       "\t Naive\\_B                  &  4444 &  263 & 0.05918092\\\\\n",
+       "\t Regulatory\\_T             &  8766 &  515 & 0.05874971\\\\\n",
+       "\t Effector\\_memory\\_CD8pos\\_T & 15890 &  925 & 0.05821271\\\\\n",
+       "\t Gamma\\_delta\\_T            &  4474 &  260 & 0.05811354\\\\\n",
+       "\t Naive\\_Teffs              & 19934 & 1149 & 0.05764021\\\\\n",
+       "\t Naive\\_Tregs              &    53 &    3 & 0.05660377\\\\\n",
+       "\t Bulk\\_B                   &  2343 &  130 & 0.05548442\\\\\n",
+       "\t Th17\\_precursors          & 25923 & 1389 & 0.05358176\\\\\n",
+       "\t Effector\\_CD4pos\\_T        & 25194 & 1342 & 0.05326665\\\\\n",
+       "\t CD8pos\\_T                 & 11672 &  614 & 0.05260452\\\\\n",
+       "\t Mem\\_B                    &  1738 &   91 & 0.05235903\\\\\n",
+       "\t Central\\_memory\\_CD8pos\\_T  & 17178 &  896 & 0.05215974\\\\\n",
+       "\t Follicular\\_T\\_Helper      & 25000 & 1303 & 0.05212000\\\\\n",
+       "\t Th1\\_precursors           & 32167 & 1641 & 0.05101502\\\\\n",
+       "\t Th2\\_precursors           & 28193 & 1394 & 0.04944490\\\\\n",
+       "\t Memory\\_Teffs             & 32962 & 1619 & 0.04911717\\\\\n",
+       "\t Monocytes                &    45 &    2 & 0.04444444\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 20 × 4\n",
+       "\n",
+       "| Cell.Type &lt;fct&gt; | DA.Peak.Count &lt;int&gt; | Overlap.Count &lt;int&gt; | Proportion &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| Mature_NK                |   292 |   40 | 0.13698630 |\n",
+       "| Memory_Tregs             |  5776 |  355 | 0.06146122 |\n",
+       "| Naive_CD8_T              |  3389 |  207 | 0.06107996 |\n",
+       "| Naive_B                  |  4444 |  263 | 0.05918092 |\n",
+       "| Regulatory_T             |  8766 |  515 | 0.05874971 |\n",
+       "| Effector_memory_CD8pos_T | 15890 |  925 | 0.05821271 |\n",
+       "| Gamma_delta_T            |  4474 |  260 | 0.05811354 |\n",
+       "| Naive_Teffs              | 19934 | 1149 | 0.05764021 |\n",
+       "| Naive_Tregs              |    53 |    3 | 0.05660377 |\n",
+       "| Bulk_B                   |  2343 |  130 | 0.05548442 |\n",
+       "| Th17_precursors          | 25923 | 1389 | 0.05358176 |\n",
+       "| Effector_CD4pos_T        | 25194 | 1342 | 0.05326665 |\n",
+       "| CD8pos_T                 | 11672 |  614 | 0.05260452 |\n",
+       "| Mem_B                    |  1738 |   91 | 0.05235903 |\n",
+       "| Central_memory_CD8pos_T  | 17178 |  896 | 0.05215974 |\n",
+       "| Follicular_T_Helper      | 25000 | 1303 | 0.05212000 |\n",
+       "| Th1_precursors           | 32167 | 1641 | 0.05101502 |\n",
+       "| Th2_precursors           | 28193 | 1394 | 0.04944490 |\n",
+       "| Memory_Teffs             | 32962 | 1619 | 0.04911717 |\n",
+       "| Monocytes                |    45 |    2 | 0.04444444 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   Cell.Type                DA.Peak.Count Overlap.Count Proportion\n",
+       "1  Mature_NK                  292           40          0.13698630\n",
+       "2  Memory_Tregs              5776          355          0.06146122\n",
+       "3  Naive_CD8_T               3389          207          0.06107996\n",
+       "4  Naive_B                   4444          263          0.05918092\n",
+       "5  Regulatory_T              8766          515          0.05874971\n",
+       "6  Effector_memory_CD8pos_T 15890          925          0.05821271\n",
+       "7  Gamma_delta_T             4474          260          0.05811354\n",
+       "8  Naive_Teffs              19934         1149          0.05764021\n",
+       "9  Naive_Tregs                 53            3          0.05660377\n",
+       "10 Bulk_B                    2343          130          0.05548442\n",
+       "11 Th17_precursors          25923         1389          0.05358176\n",
+       "12 Effector_CD4pos_T        25194         1342          0.05326665\n",
+       "13 CD8pos_T                 11672          614          0.05260452\n",
+       "14 Mem_B                     1738           91          0.05235903\n",
+       "15 Central_memory_CD8pos_T  17178          896          0.05215974\n",
+       "16 Follicular_T_Helper      25000         1303          0.05212000\n",
+       "17 Th1_precursors           32167         1641          0.05101502\n",
+       "18 Th2_precursors           28193         1394          0.04944490\n",
+       "19 Memory_Teffs             32962         1619          0.04911717\n",
+       "20 Monocytes                   45            2          0.04444444"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 3 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Treatment</th><th scope=col>DA.Peak.Count</th><th scope=col>Overlap.Count</th><th scope=col>Proportion</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>R848</td><td>  4</td><td> 1</td><td>0.25000000</td></tr>\n",
+       "\t<tr><td>BGP </td><td> 16</td><td> 3</td><td>0.18750000</td></tr>\n",
+       "\t<tr><td>WB  </td><td>958</td><td>48</td><td>0.05010438</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 3 × 4\n",
+       "\\begin{tabular}{llll}\n",
+       " Treatment & DA.Peak.Count & Overlap.Count & Proportion\\\\\n",
+       " <fct> & <int> & <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t R848 &   4 &  1 & 0.25000000\\\\\n",
+       "\t BGP  &  16 &  3 & 0.18750000\\\\\n",
+       "\t WB   & 958 & 48 & 0.05010438\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 3 × 4\n",
+       "\n",
+       "| Treatment &lt;fct&gt; | DA.Peak.Count &lt;int&gt; | Overlap.Count &lt;int&gt; | Proportion &lt;dbl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| R848 |   4 |  1 | 0.25000000 |\n",
+       "| BGP  |  16 |  3 | 0.18750000 |\n",
+       "| WB   | 958 | 48 | 0.05010438 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Treatment DA.Peak.Count Overlap.Count Proportion\n",
+       "1 R848        4            1            0.25000000\n",
+       "2 BGP        16            3            0.18750000\n",
+       "3 WB        958           48            0.05010438"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "da.peak.freqs.ia <- as.data.frame(table(da.peaks.ia$Cell.Type)) %>%\n",
+    "    dplyr::select(Cell.Type=1, DA.Peak.Count=2)\n",
+    "\n",
+    "da.peak.freqs.rm <- as.data.frame(table(da.peaks.rm$Treatment)) %>%\n",
+    "    dplyr::select(Treatment=1, DA.Peak.Count=2)\n",
+    "\n",
+    "overlap.set.peaks <- overlap.set %>%\n",
+    "    dplyr::select(Peak.ID, Peak.Contrast.Name) %>%\n",
+    "    unique()\n",
+    "overlap.freqs <- as.data.frame(table(overlap.set.peaks$Peak.Contrast.Name)) %>%\n",
+    "    dplyr::select(Contrast.Name=1, Overlap.Count=2)\n",
+    "\n",
+    "merge(da.peak.freqs.ia, overlap.freqs, by.x=\"Cell.Type\", by.y=\"Contrast.Name\") %>%\n",
+    "    dplyr::mutate(Proportion=Overlap.Count / DA.Peak.Count) %>%\n",
+    "    dplyr::arrange(desc(Proportion))\n",
+    "\n",
+    "merge(da.peak.freqs.rm, overlap.freqs, by.x=\"Treatment\", by.y=\"Contrast.Name\") %>%\n",
+    "    dplyr::mutate(Proportion=Overlap.Count / DA.Peak.Count) %>%\n",
+    "    dplyr::arrange(desc(Proportion))"
    ]
   },
   {
