Updated module QTL and pQTL mapping

--- a/04_Expression/scripts/eigengene_sva_analysis.ipynb
+++ b/04_Expression/scripts/eigengene_sva_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "13a6d567-93eb-49cb-b990-47eeadbaa4ed",
    "metadata": {},
    "source": [
-    "# Eigengene SVA Cell Proportions\n",
+    "# Eigengene SVA Analysis\n",
     "\n",
     "**Created**: 13 December 2021"
    ]
