Updated mQTL Mapping

--- a/04_Expression/scripts/eigengene_sva_preparation.ipynb
+++ b/04_Expression/scripts/eigengene_sva_preparation.ipynb
@@ -1680,17 +1680,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "9ca7f99f-8647-4923-8eb8-1b8969407e4c",
+   "execution_count": 35,
+   "id": "0b68e365-3db2-4446-8fe9-f71ab5fdd4eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping.data <- covs[samples.with.genotypes,] %>%\n",
-    "    dplyr::mutate(Sample.ID=samples.with.genotypes) %>%\n",
+    "mapping.data <- merge(eigengenes, covs, by=0) %>%\n",
+    "    dplyr::filter(Row.names %in% samples.with.genotypes) %>%\n",
+    "    dplyr::select(Sample.ID=Row.names, everything()) %>%\n",
     "    dplyr::mutate(GAinS.ID.NonPrefix=sapply(strsplit(Sample.ID, \"_\"), function(x) { x[1] })) %>%\n",
     "    merge(., geno.fam, by.x=\"GAinS.ID.NonPrefix\", by.y=\"GAinS.ID\") %>%\n",
     "    dplyr::select(GAinS.ID=Individual.ID, everything()) %>%\n",
-    "    dplyr::select(Sample.ID, any_of(rand.effect.names), any_of(cov.names), any_of(pcs))"
+    "    dplyr::select(Sample.ID, any_of(rand.effect.names), any_of(colnames(eigengenes)), any_of(cov.names), any_of(pcs))"
    ]
   },
   {
@@ -1703,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "0ea89bc0-7ba5-41be-8f25-cf2961c20975",
    "metadata": {},
    "outputs": [],
@@ -1729,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "8b359753-e010-491e-9a22-3a3a9546b14a",
    "metadata": {},
    "outputs": [
@@ -1758,79 +1759,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2b4af4c-4e01-44fb-9164-9e3bf353eaf2",
-   "metadata": {},
-   "source": [
-    "There are ~30,000 unique diseases/traits that are captured in the catalog. To make things easier, I will search for the following terms in the study title or the disease/trait name:\n",
-    "1. Serum\n",
-    "2. Blood\n",
-    "3. Immune\n",
-    "4. COVID-19"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "24a4ff06-bcf1-4497-bfa1-f399ecdb227b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "8562"
-      ],
-      "text/latex": [
-       "8562"
-      ],
-      "text/markdown": [
-       "8562"
-      ],
-      "text/plain": [
-       "[1] 8562"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "mask <- rep(FALSE, nrow(ebi.studies))\n",
-    "terms <- c(\"serum\", \"blood\", \"immune\", \"covid-19\")\n",
-    "\n",
-    "for (term in terms) {\n",
-    "    mask <- mask | (grepl(term, tolower(ebi.studies$STUDY)) | grepl(term, tolower(ebi.studies[,\"DISEASE/TRAIT\"])))\n",
-    "}\n",
-    "\n",
-    "sum(mask)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6c7befed-55fa-4e35-9097-f3456d9fbb73",
    "metadata": {},
    "source": [
-    "About ~8500 studies have one of these four terms in them. These studies, taken together, contain ~100k associations associated with ~45K SNPs. Not all these associations are present in our genotyping data. After filtering based on the genotyping in GAinS, we have 47,923 studies and 18,725 SNPs."
+    "After filtering based on the genotyping in GAinS, we have 124,525 studies and 56,219 SNPs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "28a18096-239a-4f40-ab5e-f5aca97659bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "47923"
+       "124525"
       ],
       "text/latex": [
-       "47923"
+       "124525"
       ],
       "text/markdown": [
-       "47923"
+       "124525"
       ],
       "text/plain": [
-       "[1] 47923"
+       "[1] 124525"
       ]
      },
      "metadata": {},
@@ -1839,16 +1792,16 @@
     {
      "data": {
       "text/html": [
-       "18725"
+       "56219"
       ],
       "text/latex": [
-       "18725"
+       "56219"
       ],
       "text/markdown": [
-       "18725"
+       "56219"
       ],
       "text/plain": [
-       "[1] 18725"
+       "[1] 56219"
       ]
      },
      "metadata": {},
@@ -1857,7 +1810,7 @@
    ],
    "source": [
     "# Studies with terms specified\n",
-    "studies <- ebi.studies[mask, \"STUDY ACCESSION\"]\n",
+    "studies <- ebi.studies[, \"STUDY ACCESSION\"]\n",
     "\n",
     "# Associations from the studies that are genome-wide significant\n",
     "studies.assoc <- ebi.assoc[ebi.assoc[, \"STUDY ACCESSION\"] %in% studies,] %>%\n",
@@ -1865,8 +1818,9 @@
     "    dplyr::filter(`P-VALUE` < 5e-8)\n",
     "\n",
     "# Association SNPs that overlap with genotyping data in GAinS\n",
+    "# Ignore SNPs that are on the X chromosome\n",
     "studies.assoc <- studies.assoc %>%\n",
-    "    dplyr::filter(SNPS %in% geno.bim$snps)\n",
+    "    dplyr::filter(SNPS %in% geno.bim$snps[geno.bim$chr != \"23\"])\n",
     "\n",
     "nrow(studies.assoc)\n",
     "\n",
@@ -1875,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "08b11812-a3e3-46ea-87f0-382fd238971b",
    "metadata": {},
    "outputs": [],
@@ -1898,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "c8a7961b-fc8c-43c7-a058-ba0cdf59eb5c",
    "metadata": {},
    "outputs": [],
