Updated CHEERS and ATAC-Seq pipelines

--- a/03_Functional_Interpretation/scripts/process_metadata.ipynb
+++ b/03_Functional_Interpretation/scripts/process_metadata.ipynb
@@ -28,14 +28,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -54,7 +54,6 @@
    "cell_type": "markdown",
    "id": "7d33c50d-eb55-4054-96ff-ef4750ab303b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -700,7 +699,7 @@
    "id": "7e12cefa-88a3-4d5e-9c86-f26ada49fdfb",
    "metadata": {},
    "source": [
-    "These are the common fields across all three studies."
+    "I will not be including RNA-Seq data from Ram-Mohan *et al.* because they have not been properly uploaded to SRA. These are the common fields across Calderon *et al.* and Corces *et al.*"
    ]
   },
   {
@@ -710,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "common.fields <- Reduce(intersect, list(colnames(corces.rna), colnames(calderon.rna), colnames(ram.mohan.rna)))"
+    "common.fields <- Reduce(intersect, list(colnames(corces.rna), colnames(calderon.rna)))"
    ]
   },
   {
@@ -784,33 +783,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f4fe63ab-176c-4535-8ebe-a3f19f1d1ad5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ram.mohan.rna.update <- cbind(\n",
-    "    ram.mohan.rna[, common.fields],\n",
-    "    ram.mohan.rna[, setdiff(colnames(ram.mohan.rna), common.fields), drop=F] %>%\n",
-    "        dplyr::mutate(Lineage=\"MYELOID\") %>%\n",
-    "        dplyr::mutate(Donor=paste0(\"Ram-Mohan-D1\")) %>%\n",
-    "        dplyr::mutate(Treatment=gsub(\" hours?\", \"\", time)) %>%\n",
-    "        dplyr::mutate(Replicate=replicates(Treatment)) %>%\n",
-    "        dplyr::select(Lineage, Donor, Treatment, Replicate)\n",
-    ") %>%\n",
-    "    dplyr::mutate(Cell_type=\"Neutrophils\") %>%\n",
-    "    dplyr::mutate(Treatment=ifelse(grepl(\"^Healthy\", source_name), paste0(\"noECh\", Treatment), paste0(\"ECh\", Treatment))) %>%\n",
-    "    dplyr::mutate(Stimulated=grepl(\"^EC\", Treatment)) %>%\n",
-    "    dplyr::select(everything(), Lineage, Donor, Stimulated, Treatment, Replicate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "id": "c37be432-1e20-486f-9be3-3d67bda83502",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rna <- rbind(corces.rna.update, calderon.rna.update, ram.mohan.rna.update) %>%\n",
+    "rna <- rbind(corces.rna.update, calderon.rna.update) %>%\n",
     "    dplyr::mutate(Group.ID=paste0(Donor, \"-\", Cell_type, \"-\", Treatment)) %>%\n",
     "    dplyr::mutate(Sample.ID=paste0(Group.ID, \"-\", Replicate)) %>%\n",
     "    dplyr::select(Run, Group.ID, Sample.ID, Donor, Lineage, Cell_type, Stimulated, Treatment, Replicate, everything(), -DATASTORE.filetype, -DATASTORE.provider, -DATASTORE.region)"
@@ -818,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "90026ebf-3593-4d80-8788-460fda3136ab",
    "metadata": {},
    "outputs": [
@@ -917,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "fde5042a-0f05-487f-8178-86b5572e1c2f",
    "metadata": {},
    "outputs": [],
@@ -945,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "286acef8-7202-4f88-875e-227209131980",
    "metadata": {},
    "outputs": [],
@@ -963,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "16323978-daae-4d93-a3d1-086e05eeede8",
    "metadata": {},
    "outputs": [],
@@ -982,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "8383d45e-32c7-4853-8799-38b1a173e01e",
    "metadata": {},
    "outputs": [],
@@ -1005,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "871c8c07-0bab-4cf0-8136-8e8aa11e8075",
    "metadata": {},
    "outputs": [],
@@ -1025,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "9825d776-3409-4c71-b486-6faca476e814",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "14e5dd02-d0e3-4e8d-bb96-e00d39b6d257",
    "metadata": {},
    "outputs": [],
@@ -1061,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "8fb7226c-79bb-4a67-bcde-09afd4ba1f72",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "1c3420cc-aa27-4b6a-ac88-2b6be867e9ae",
    "metadata": {},
    "outputs": [],
